swagger "try it out" and route /seed
